--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "leaflet": "^1.8.0",
+        "leaflet-bing-layer": "^3.3.1",
         "sass": "^1.53.0"
     }
 }
